# autoheal-locator-python

./: .gitignore  README.md  START_HERE.md  pyproject.toml  setup.py
autoheal/: __init__.py  autoheal_locator.py  quickstart_config.py
autoheal/config/: __init__.py  ai_config.py  autoheal_config.py  cache_config.py  locator_options.py  performance_config.py  reporting_config.py  resilience_config.py
autoheal/core/: __init__.py  ai_service.py  element_locator.py  selector_cache.py  web_automation_adapter.py
autoheal/exception/: __init__.py  exceptions.py
autoheal/impl/: __init__.py
autoheal/impl/adapter/: __init__.py  playwright_adapter.py  selenium_adapter.py
autoheal/impl/ai/: AI_PROVIDERS_IMPLEMENTATION_PLAN.md  __init__.py  mock_ai_service.py  resilient_ai_service.py
autoheal/impl/ai/providers/: __init__.py  anthropic_provider.py  base_provider.py  deepseek_provider.py  gemini_provider.py  grok_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  response_parser.py
autoheal/impl/cache/: __init__.py  cachetools_selector_cache.py  file_selector_cache.py  redis_selector_cache.py
autoheal/impl/locator/: __init__.py  cost_optimized_hybrid_element_locator.py  dom_element_locator.py  hybrid_element_locator.py  visual_element_locator.py
autoheal/metrics/: __init__.py  ai_service_metrics.py  cache_metrics.py  cost_metrics.py  locator_metrics.py
autoheal/models/: __init__.py  ai_analysis_result.py  cached_selector.py  disambiguation_result.py  element_candidate.py  element_context.py  element_fingerprint.py  enums.py  locator_filter.py  locator_request.py  locator_result.py  playwright_locator.py  position.py
autoheal/reporting/: __init__.py  autoheal_reporter.py  reporting_autoheal_locator.py
autoheal/resilience/: __init__.py  circuit_breaker.py
autoheal/utils/: __init__.py  locator_type_detector.py  playwright_locator_converter.py  selector_utils.py
docs/: README.md  ai-configuration.md  installation.md  quick-start.md  selenium-usage-guide.md
examples/: README.md  groq_quickstart.py  playwright_advanced.py  playwright_basic.py  selenium_advanced.py  selenium_basic.py  test_with_pytest.py
tests/: conftest.py  test_local_model_integration.py  test_saucedemo_healing.py
