[tool.poetry]
name = "autoheal-locator"
version = "1.0.7"
description = "AI-powered test automation framework that automatically heals broken element locators in Selenium and Playwright tests"
authors = ["SanjayPG <sanjay.pg@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SanjayPG/autoheal-locator-python"
repository = "https://github.com/SanjayPG/autoheal-locator-python"
documentation = "https://github.com/SanjayPG/autoheal-locator-python/docs"
keywords = ["selenium", "playwright", "test-automation", "ai", "locator-healing", "web-testing", "element-locator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [{include = "autoheal"}]

[tool.poetry.dependencies]
python = "^3.9"
# Core automation frameworks
selenium = "^4.15.0"
playwright = {version = "^1.40.0", optional = true}

# HTTP and async
httpx = "^0.25.0"
aiohttp = "^3.9.0"

# Configuration and validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

# Caching
cachetools = "^5.3.0"
redis = {version = "^5.0.0", optional = true}
diskcache = "^5.6.0"
filelock = "^3.13.0"

# Resilience
tenacity = "^8.2.0"

# Metrics and monitoring
prometheus-client = "^0.19.0"

# Reporting
jinja2 = "^3.1.0"

# Utilities
pillow = "^10.1.0"  # For screenshot handling
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
pytest-xdist = "^3.5.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pylint = "^3.0.0"
bandit = "^1.7.0"
pre-commit = "^3.6.0"

# Documentation
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"

# Testing utilities
responses = "^0.24.0"
faker = "^21.0.0"
testcontainers = {version = "^3.7.0", extras = ["selenium"]}

[tool.poetry.extras]
playwright = ["playwright"]
redis = ["redis"]
all = ["playwright", "redis"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=autoheal",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--asyncio-mode=auto",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "playwright: Playwright-specific tests",
    "selenium: Selenium-specific tests",
    "slow: Slow running tests",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.coverage.run]
source = ["autoheal"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
